# TinyC

./: .gitignore  CMakeLists.txt  ast.cpp  ast.h  common.h  lexer.h  main.cpp  parser.cpp  parser.h  scanner.h  visitor.cpp  visitor.h  visitor_interface.h
cmake/: antlr4-generator.cmake.in
examples/: assign.cc
grammar/: TinyCLex.cpp  TinyCLex.g4  TinyCLex.h  TinyCParse.cpp  TinyCParse.g4  TinyCParse.h  TinyCParseBaseListener.cpp  TinyCParseBaseListener.h  TinyCParseBaseVisitor.cpp  TinyCParseBaseVisitor.h  TinyCParseListener.cpp  TinyCParseListener.h  TinyCParseVisitor.cpp  TinyCParseVisitor.h
tests/: lex_test.cc
